# salsa-iwj-otter

./: .cargo-doc-suppress-errors  .dir-locals.el  .gitignore  .gitlab-ci.yml  .mailmap  CHANGELOG.md  Cargo.lock.example  Cargo.nail  Cargo.toml  HIDDEN.md  HIDDEN2.md  HIDDEN3.md  LICENCE  Makefile  NOTES  PROTOCOL.md  README.md  TODO  apitest.rs  bundled-sources-make-index  clippy-options  extract-bf-tests  make-release  media-scraper  msgpack-dump  run-inkscape-extension  rustfmt.toml  server dummy - alice - Otter.html  server-test-zealot.toml  server-test.toml  server.toml  tsc-wrap  tsconfig.json  update-cargo-metadata  update-versions  usvg-processor  wasmtest.nodejs  wdriver.rs
apitest/: Cargo.toml  apitest.rs  at-bundles.rs  at-currency.rs  at-dummy.rs  at-hidden.rs  at-otter.rs  atmain.rs  dummy.pub  main.rs  mock-ssh  mock-ssh-restricted  run1
base/: Cargo.toml  crates.rs  geometry.rs  html.rs  imports.rs  lib.rs  misc.rs  prelude-part.rs  prelude.rs  zcoord.rs
cli/: Cargo.toml  adhoc.rs  admin.rs  clisupport.rs  forgame.rs  forssh.rs  otter.rs  usebundles.rs  uselibs.rs
daemon/: Cargo.toml  accounts.rs  actix-files-example.rs  actix-test.rs  api.rs  cmdlistener.rs  crates.rs  error.rs  gamestate.rs  imports.rs  logging.rs  main.rs  session.rs  sse.rs  updates.rs
debian/: changelog  control  rules
demo/: test.game.toml  test.table.toml
dice/: cooldown-template-extractor  extract-image-only  overlay-template-extractor
docs/: Makefile  advanced.md  build.md  build.rst  bundles.rst  conf.py  dev.md  gamespec.rst  index.rst  install.md  shapelibs.rst  user.md  user.rst
docs/source/: conf.py  index.rst
emails/: token-other.tera  token-unix.tera
examples/test-bundle/: otter.toml
examples/test-bundle/specs/: demo-in-test-bundle.game.toml
jstest/: Cargo.toml  basic.nodejs  from-pieces  jst-lower.rs  jstest.rs  lower.nodejs  run  run1  wasmtest.nodejs
junk/: gamestate.rs  global.rs  instance.rs  main.rs  testload.rs
nwtemplates/: bundles-info-pane.tera  image-usvg.tera  player-info-pane.tera  token-other.tera  token-unix.tera
save/: a-dummy  g-dummy
server dummy - alice - Otter_files/: script.js  wasm.js
specs/: demo.game.toml  local-users.table.toml  mao.game.toml  penultima.game.toml  private.table.toml  same-scope.table.toml  samescope.table.toml  test.table.toml  vatikan.game.toml
src/: USVG_DEFAULT_ARGS.txt  accounts.rs  adhoc-templates.rs  api.rs  asseturl.rs  authproofs.rs  bigfloat.rs  bundles.rs  childio.rs  client.rs  clock.rs  cmdlistener.rs  command.rs  commands.rs  config.rs  crates.rs  currency.rs  debugmutex.rs  debugreader.rs  deck.rs  dice.rs  digestrw.rs  error.rs  fake-rng.rs  fake-time.rs  fastsplit.rs  gamestate.rs  geometry.rs  global.rs  hand.rs  hidden.rs  html.rs  http.rs  imports.rs  instance.rs  keydata.rs  lens.rs  lib.rs  magic.rs  main.rs  (+31 more)
src/std-doc/: Cargo.toml  lib.rs
support/: Cargo.toml  authproofs.rs  childio.rs  config.rs  crates.rs  digestrw.rs  fake-rng.rs  fake-time.rs  imports.rs  lib.rs  packetframe.rs  prelude-part.rs  prelude.rs  progress.rs  slotmap-slot-idx.rs  support.rs  termprogress.rs  toml-de.rs
templates/: bigfloat-tests.ts  bigfloat.ts  blah.tera  front.tera  landscape.tera  libre  loading.tera  log-save.js  macros.tera  script.js  script.ts  session.tera  test-inject.js  test.html  test.tera
wasm/: Cargo.toml  wasm.rs
wdriver/: Cargo.toml  firefox-wrapper  lib.rs  mod.rs  run1  simple.rs  wdriver.rs  wdt-altergame.rs  wdt-bundles.rs  wdt-hand.rs  wdt-simple.rs
zcoord/: Cargo.toml  misc.rs  zcoord.rs
zcoord/src/: lib.rs
