# Copyright 2020-2021 Ian Jackson and contributors to Otter
# SPDX-License-Identifier: AGPL-3.0-or-later
# There is NO WARRANTY.

[package]
name="otter"
description="Otter game system; common infrastructure Rust crate."

version="0.7.3"
license="AGPL-3.0-or-later"
edition="2018"
homepage="https://www.chiark.greenend.org.uk/~ianmdlvl/otter/docs/"
repository="https://salsa.debian.org/iwj/otter"
keywords=["games"]
authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>",
         "and the contributors to Otter"]

[workspace]
members=["cli", "wasm", "daemon", "wdriver", "apitest", "jstest"]

[build-dependencies]
usvg="0.15"
bundle-sources="0.0.1"


[dependencies]

otter-base.path="base"
otter-base.version="=0.7.3"
	
anyhow="1"
backtrace="0.3"
base64="0.13"
boolinator="2"
byteorder="1.3"
cast_trait_object="0.1"
chrono="0.4"
chrono-tz="0.5"
console="0.15"
crossbeam-utils="0.8"
delegate="0.6"
derive-into-owned="0.1"
digest="0.9"
downcast-rs="1"
either="1"
enum_dispatch="0.3.5"
env_logger="0.9"
failure="0.1.8"
fehler="1"
fs2="0.4"
glob="0.3"
inventory="0.1"
lazy-init="0.5"
lazy_static="1"
libc="0.2"
log="0.4"
nix="0.23"
num="0.4"
num-derive="0.3"
num-traits="0.2"
once_cell="1"
openssh-keys="0.5"
ordered-float="2"
parking_lot="0.11"
percent-encoding="2"
pwd="1"
rand="0.8"
regex="1"
rmp="0.8"
rmp-serde="0.15"
serde_with="1"
structopt="0.3"
sha2="0.9"
subtle="2.4"
tempfile="3"
toml="0.5"
typetag="0.1.6"
uds="0.2"
unicase="2"
unicode-width="0.1"
url="2"
vecdeque-stableix="1"
xmlparser = "0.13"
zip="0.5"

enum-map     = { version="1"    , features=["serde"       ] }
flexi_logger = { version="0.22" , features=["specfile"    ] }
image = { version = "0.24", default-features=false, features=["jpeg","png"] }
index_vec    = { version="0.1.1", features=["serde"       ] }
mio          = { version="0.7",   features=["os-ext", "os-poll" ] }
serde        = { version="1"    , features=["derive", "rc"] }
strum        = { version="0.24" , features=["derive"      ] }

tera_standalone = { version="1.10", package="tera" }

slotmap = { package="slotmap-fork-otter", version="1", git="https://github.com/ijackson/slotmap", branch="slotmap-fork-otter", features=["serde"] }

#fin.
