# Copyright 2020-2021 Ian Jackson and contributors to Otter
# SPDX-License-Identifier: AGPL-3.0-or-later
# There is NO WARRANTY.

[package]
name="otter"
description="Otter game system; main data structures Rust crate."

version="1.0.0"
license="AGPL-3.0-or-later"
edition="2021"
resolver="1" # new resolver crashes!
homepage="https://www.chiark.greenend.org.uk/~ianmdlvl/otter/docs/"
repository="https://salsa.debian.org/iwj/otter"
keywords=["games"]
authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>",
         "and the contributors to Otter"]

[workspace]
members=["cli", "wasm", "daemon", "wdriver", "apitest", "jstest"]

[profile.release]
overflow-checks = true

[build-dependencies]
usvg="0.22"
bundle-sources="0.0.1"


[dependencies]

otter-support.path="support"
otter-support.version="=1.0.0"
	
backtrace="0.3"
base64="0.13"
boolinator="2"
cast_trait_object="0.1"
crossbeam-utils="0.8"
delegate="0.6"
downcast-rs="1"
educe="0.4"
either="1"
enum_dispatch="0.3.5"
env_logger="0.9"
glob="0.3"
humantime-serde="1"
inventory="0.2"
lazy-init="0.5"
lazy-regex="2"
libc="0.2"
num="0.4"
once_cell="1"
openssh-keys="0.5"
ordered-float="2"
percent-encoding="2"
regex="1"
structopt="0.3"
subtle="2.4"
tempfile="3"
tera="1.10"
typetag="0.1.6"
uds="0.2"
unicase="2"
url="2"
vecdeque-stableix="1"
xmlparser = "0.13"
zip="0.6"

ambassador = "0.3.1"

async-condvar-fair = { version="0.2", features=["parking_lot_0_12"] }
const-default = { version="1",    features=["derive"      ] }
enum-map     = { version="2"    , features=["serde"       ] }
image = { version = "0.24", default-features=false, features=["jpeg","png"] }
index_vec    = { version="0.1.1", features=["serde"       ] }

slotmap = { package="slotmap-fork-otter", version="1", git="https://github.com/ijackson/slotmap", branch="slotmap-fork-otter", features=["serde"] }

# Repeated in other Cargo.toml's because importing does not work properly
fehler="1"
num-traits="0.2"
serde_with="1"
thiserror="1"
serde        = { version="1"    , features=["derive", "rc"] }
strum        = { version="0.24" , features=["derive"      ] }

#fin.
