
[dependencies]
ego-tree="0.6"
fehler="1"
humantime="2"
num-traits="0.2"
scraper="0.12"
structopt="0.3"

[dependencies.otter]
path=".."

[dependencies.reqwest]
version="0.11"
features=["blocking", "json", "stream"]

[dependencies.serde]
version="1"
features=["derive", "rc"]

[dependencies.strum]
version="0.20"
features=["derive"]

[lib]
name="otter_api_tests"
path="../apitest.rs"

[package]
edition="2018"
license="AGPL-3.0-or-later"
name="otter-api-tests"
version="0.0.1"
authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>"]