# Copyright 2020-2021 Ian Jackson and contributors to Otter
# SPDX-License-Identifier: AGPL-3.0-or-later
# There is NO WARRANTY.

[package]
name="otter-api-tests"
description="Otter game system; API tests crates."

version="0.5.0"
license="AGPL-3.0-or-later"
edition="2018"
homepage="https://www.chiark.greenend.org.uk/~ianmdlvl/otter/docs/"
repository="https://salsa.debian.org/iwj/otter"
keywords=["games"]
authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>",
         "and the contributors to Otter"]

[lib]
name="otter_api_tests"
path="apitest.rs"

[[bin]]
name="at-otter"
path="at-otter.rs"


[dependencies]

otter.path=".."
otter.version="0.5.0"

ego-tree="0.6"
fehler="1"
humantime="2"
num-traits="0.2"
scraper="0.12"
structopt="0.3"

reqwest      = { version="0.11" , features=["blocking","json","stream"] }
serde        = { version="1"    , features=["derive", "rc"] }
strum        = { version="0.20" , features=["derive"      ] }


#fin.
