
[package]
name = "otter-base"
authors = ["Ian Jackson <ijackson@chiark.greenend.org.uk>"]
license = "AGPL-3.0-or-later"

version = "0.0.1"
edition = "2018"

[lib]
name = "otter_base"
path = "lib.rs"

[dependencies]

arrayvec = "0.5"
derive_more = "0.99"
fehler = "1"
if_chain = "1"
thiserror = "1"
serde = { version = "1", features = ["derive","rc"] }
serde_with = "1"
