# Copyright 2020-2021 Ian Jackson and contributors to Otter
# SPDX-License-Identifier: AGPL-3.0-or-later
# There is NO WARRANTY.

[package]
name="otter-base"
description="Otter game system; WASM/hostside common code crate."

version="0.7.2"
license="AGPL-3.0-or-later"
edition="2018"
homepage="https://www.chiark.greenend.org.uk/~ianmdlvl/otter/docs/"
repository="https://salsa.debian.org/iwj/otter"
keywords=["games"]
authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>",
         "and the contributors to Otter"]

[lib]
name="otter_base"
path="lib.rs"


[dependencies]

arrayvec="0.7"
derive_more="0.99"
extend="1"
htmlescape="0.3"
if_chain = "1"
itertools="0.10"
num-derive="0.3"
num-traits="0.2"
serde_json="1"
void="1"

# Repeated in other Cargo.toml's because importing does not work properly
fehler="1"
serde = { version = "1", features = ["derive","rc"] }
serde_with="1"
thiserror="1"

#fin.
