# Copyright 2020-2021 Ian Jackson and contributors to Otter
# SPDX-License-Identifier: AGPL-3.0-or-later
# There is NO WARRANTY.

[package]
name="otter-daemon"
version="0.0.1"

authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>",
         "and the contributors to Otter"]
license="AGPL-3.0-or-later"
edition="2018"

[[bin]]
name="daemon-otter"
path="main.rs"


[dependencies]

otter.path=".."
otter-base.path="../base"

fehler="1"
num-traits="0.2"
rocket_cors="0.5"
serde_with="1"
structopt="0.3"

rocket = { version="^0.4.6", features=["sse"] }
rocket_contrib = { version="0.4", default-features=false, features=["tera_templates", "helmet", "json", "serve"] }

serde        = { version="1"    , features=["derive", "rc"] }
strum        = { version="0.20" , features=["derive"      ] }

#fin.
