# Copyright 2020-2021 Ian Jackson and contributors to Otter
# SPDX-License-Identifier: AGPL-3.0-or-later
# There is NO WARRANTY.

[package]
name="otter-daemon"
description="Otter game system; server executable crate."

version="0.7.3"
license="AGPL-3.0-or-later"
edition="2018"
homepage="https://www.chiark.greenend.org.uk/~ianmdlvl/otter/docs/"
repository="https://salsa.debian.org/iwj/otter"
keywords=["games"]
authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>",
         "and the contributors to Otter"]

[[bin]]
name="daemon-otter"
path="main.rs"

[[bin]]
name="actix-test"
path="actix-test.rs"

[[bin]]
name="actix-files-example"
path="actix-files-example.rs"


[dependencies]

otter.path=".."
otter.version="=0.7.3"
otter-base.path="../base"
otter-base.version="=0.7.3"

fehler="1"
futures="0.3"
num-traits="0.2"
rocket_cors="0.5"
serde_with="1"
structopt="0.3"

actix-web = "4"
actix-files = "0.6"
actix-cors = "0.6"

rocket = { version="^0.4.6", features=["sse"] }
rocket_contrib = { version="0.4", default-features=false, features=["tera_templates", "helmet", "json", "serve"] }

serde        = { version="1"    , features=["derive", "rc"] }
strum        = { version="0.24" , features=["derive"      ] }

#fin.
