# Copyright 2020-2021 Ian Jackson and contributors to Otter
# SPDX-License-Identifier: AGPL-3.0-or-later
# There is NO WARRANTY.

[package]
name="otter-daemon"
description="Otter game system; server executable crate."

version="1.0.0"
license="AGPL-3.0-or-later"
edition="2021"
resolver="1" # new resolver crashes!
homepage="https://www.chiark.greenend.org.uk/~ianmdlvl/otter/docs/"
repository="https://salsa.debian.org/iwj/otter"
keywords=["games"]
authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>",
         "and the contributors to Otter"]

[[bin]]
name="daemon-otter"
path="main.rs"


[dependencies]

otter.path=".."
otter.version="=1.0.0"
otter-base.path="../base"
otter-base.version="=1.0.0"

fehler="1"
futures="0.3"
num-traits="0.2"
serde_with="1"
structopt="0.3"

ansi_term="0.12"
mime = "0.3"
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.6"

tokio        = { version="1",     features=["full","parking_lot"] }

serde        = { version="1"    , features=["derive", "rc"] }
strum        = { version="0.24" , features=["derive"      ] }

#fin.
