# Copyright 2020-2021 Ian Jackson and contributors to Otter
# SPDX-License-Identifier: AGPL-3.0-or-later
# There is NO WARRANTY.

[package]
name="otter-support"
description="Otter game system; support code Rust crate."

version="1.0.0"
license="AGPL-3.0-or-later"
edition="2021"
resolver="1" # new resolver crashes!
homepage="https://www.chiark.greenend.org.uk/~ianmdlvl/otter/docs/"
repository="https://salsa.debian.org/iwj/otter"
keywords=["games"]
authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>",
         "and the contributors to Otter"]

[lib]
name="otter_support"
path="lib.rs"


[dependencies]

otter-base.path="../base"
otter-base.version="=1.0.0"
	
anyhow="1"
byteorder="1.3"
chrono="0.4"
chrono-tz="0.6"
console="0.15"
derive-into-owned="0.2"
digest="0.10"
fehler="1"
fs2="0.4"
lazy_static="1"
log="0.4"
nix="0.23"
num-derive="0.3"
parking_lot="0.12"
paste="1"
pwd="1"
rand="0.8"
rmp="0.8"
rmp-serde="1"
sha2="0.10"
toml="0.5"
unicode-width="0.1"

flexi_logger = { version="0.22" , features=["specfile"    ] }
mio          = { version="0.8",   features=["os-ext", "os-poll" ] }

# Repeated in other Cargo.toml's because importing does not work properly
num-traits="0.2"
serde_with="1"
serde        = { version="1"    , features=["derive", "rc"] }
strum        = { version="0.24" , features=["derive"      ] }

#fin.
