
[dependencies]
console_error_panic_hook="0.1"
fehler="1"
js-sys="0.3"
wee_alloc="0.4"

wasm-bindgen="= 0.2.70"
[build-dependencies]
wasm-bindgen-cli = "0.2.70"

[dependencies.otter-base]
path="../base"

[lib]
name="otter_wasm"
path="wasm.rs"
crate-type=["cdylib"]

[package]
edition="2018"
license="AGPL-3.0-or-later"
name="otter-wasm"
version="0.0.1"
authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>"]
