# Copyright 2020-2021 Ian Jackson and contributors to Otter
# SPDX-License-Identifier: AGPL-3.0-or-later
# There is NO WARRANTY.

[package]
name="otter-wasm"
description="Otter game system; Rust WASM crate."

version="0.7.0"
license="AGPL-3.0-or-later"
edition="2018"
homepage="https://www.chiark.greenend.org.uk/~ianmdlvl/otter/docs/"
repository="https://salsa.debian.org/iwj/otter"
keywords=["games"]
authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>",
         "and the contributors to Otter"]

[lib]
name="otter_wasm"
path="wasm.rs"
crate-type=["cdylib"]

[build-dependencies]
wasm-bindgen-cli="0.2"


[dependencies]

otter-base.path="../base"
otter-base.version="=0.7.0"

console_error_panic_hook="0.1"
fehler="1"
js-sys="0.3"
wee_alloc="0.4"

wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

#fin.
