# Copyright 2020-2021 Ian Jackson and contributors to Otter
# SPDX-License-Identifier: AGPL-3.0-or-later
# There is NO WARRANTY.

[package]
name = "otter-webdriver-tests"
authors = ["Ian Jackson <ijackson@chiark.greenend.org.uk>"]
license = "AGPL-3.0-or-later"

version = "0.0.1"
edition = "2018"

[dependencies]
otter-api-tests = { path = "../apitest" }

ndarray = "0.14"
thirtyfour_sync = "0.22"
x11rb = "0.8"

# Repeated here because importing does not work properly
fehler = "1"
num-traits = "0.2"
serde = { version = "1", features = ["derive","rc"] }
structopt = "0.3"
strum = { version = "0.20", features = ['derive'] }

[lib]
name = "otter_webdriver_tests"
path = "../wdriver.rs"
