
[[bin]]
name="wdriver"
path="wdriver.rs"

[dependencies]
fehler="1"
ndarray="0.14"
num-traits="0.2"
structopt="0.3"
thirtyfour_sync="0.22"
x11rb="0.8"

[dependencies.otter-api-tests]
path="../apitest"

[dependencies.serde]
version="1"
features=["derive", "rc"]

[dependencies.strum]
version="0.20"
features=["derive"]

[package]
edition="2018"
license="AGPL-3.0-or-later"
name="otter-webdriver-tests"
version="0.0.1"
authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>"]

#fin.
