# Copyright 2020-2021 Ian Jackson and contributors to Otter
# SPDX-License-Identifier: AGPL-3.0-or-later
# There is NO WARRANTY.

[package]
name="otter-webdriver-tests"
description="Otter game system; API tests crate."

version="0.3.0"
license="AGPL-3.0-or-later"
edition="2018"
homepage="https://www.chiark.greenend.org.uk/~ianmdlvl/otter/docs/"
repository="https://salsa.debian.org/iwj/otter"
keywords=["games"]
authors=["Ian Jackson <ijackson@chiark.greenend.org.uk>",
         "and the contributors to Otter"]

[[bin]]
name="wdriver"
path="wdriver.rs"


[dependencies]

otter-api-tests.path="../apitest"

fehler="1"
ndarray="0.15"
num-traits="0.2"
structopt="0.3"
thirtyfour_sync="0.23"
x11rb="0.8"

serde        = { version="1"    , features=["derive", "rc"] }
strum        = { version="0.20" , features=["derive"      ] }

#fin.
